# Mandelbrot

./: .gitmodules  CMakeLists.txt  README.md  main.cpp  shader.h
shaders/: interior.fs  shader.fs  shader.vs
